; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_base64.c_Curl_base64url_encode.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_base64.c_Curl_base64url_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { i32 }

@base64url = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_base64url_encode(%struct.Curl_easy* %0, i8* %1, i64 %2, i8** %3, i64* %4) #0 {
  %6 = alloca %struct.Curl_easy*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i64*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8** %3, i8*** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load i32, i32* @base64url, align 4
  %12 = load %struct.Curl_easy*, %struct.Curl_easy** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i8**, i8*** %9, align 8
  %16 = load i64*, i64** %10, align 8
  %17 = call i32 @base64_encode(i32 %11, %struct.Curl_easy* %12, i8* %13, i64 %14, i8** %15, i64* %16)
  ret i32 %17
}

declare dso_local i32 @base64_encode(i32, %struct.Curl_easy*, i8*, i64, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
